--- a/src/main/resources/templates/user/contact.html
+++ b/src/main/resources/templates/user/contact.html
@@ -127,13 +127,13 @@
               <div class="contact_social_area">
                 <div class="contact_social_title">Mạng xã hội</div>
                 <div class="contact_social_icon d-flex">
-                  <a href="https://www.facebook.com/profile.php?id=61560555539153">
+                  <a target="_blank" href="https://www.facebook.com/profile.php?id=61560555539153">
                     <img
                       src="/images/social_icon/facebook_icon.svg"
                       alt="facebook"
                     />
                   </a>
-                  <a href="https://www.instagram.com/deprop_studio/">
+                  <a target="_blank" href="https://www.instagram.com/deprop_studio/">
                     <img
                       src="/images/social_icon/instagram_icon.svg"
                       alt="instagram"
