--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -85,8 +85,8 @@
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-line fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Today Sale</p>
-                                <h6 class="mb-0 totalprice" th:text="${totalSaleaday}">$1234</h6>
+                                <p class="mb-2">Doanh thu hôm nay</p>
+                                <h6 class="mb-0 totalprice" th:text="${totalSaleaday}"></h6>
                             </div>
                         </div>
                     </div>
@@ -94,8 +94,26 @@
                         <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-bar fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Total Sale</p>
-                                <h6 class="mb-0 totalprice" th:text="${totalSale}">$1234</h6>
+                                <p class="mb-2">Tổng doanh thu</p>
+                                <h6 class="mb-0 totalprice" th:text="${totalSale}"></h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fa fa-chart-bar fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Đơn hàng hôm nay</p>
+                                <h6 class="mb-0 totalprice"></h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-xl-3">
+                        <div class="bg-light rounded d-flex align-items-center justify-content-between p-4">
+                            <i class="fa fa-chart-bar fa-3x text-primary"></i>
+                            <div class="ms-3">
+                                <p class="mb-2">Tổng đơn hàng</p>
+                                <h6 class="mb-0 totalprice"></h6>
                             </div>
                         </div>
                     </div>
@@ -108,19 +126,18 @@
                 <div class="bg-light text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
                         <h6 class="mb-0">Đơn hàng</h6>
-                        <a href="">Show All</a>
                     </div>
                     <div class="table-responsive">
                         <table class="table text-start align-middle table-bordered table-hover mb-0">
                             <thead>
                                 <tr class="text-dark">
                                     <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                                    <th scope="col">Invoice</th>
-                                    <th scope="col">Customer</th>
-                                    <th scope="col">Amount</th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">Action</th>
+                                    <th scope="col">Mã đơn hàng</th>
+                                    <th scope="col">Tên khách hàng</th>
+                                    <th scope="col">Tổng tiền</th>
+                                    <th scope="col">Ngày đặt hàng</th>
+                                    <th scope="col">Tình trạng</th>
+                                    <th scope="col">Chi tiết đơn hàng</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -131,7 +148,7 @@
                                     <td class="product_price totalprice" th:text="${customerOrder.totalprice}"></td>
                                     <td th:text="${#dates.format(customerOrder.orderDate, 'dd-MM-yyyy')}"></td>
                                     <td th:text="${customerOrder.status}"></td>
-                                    <td><a class="btn btn-sm btn-primary" href="#">Detail</a></td>
+                                    <td><a class="btn btn-sm btn-primary" href="#">Xem</a></td>
                                 </tr>
                             </tbody>
                         </table>
