--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -431,8 +431,8 @@
                         <div class="single_footer_part">
                             <h4>Our Social</h4>
                             <ul class="list-unstyled">
-                                <li><a href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
-                                <li><a href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
+                                <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
                             </ul>
                         </div>
                     </div>
