--- a/src/main/resources/templates/user/product.html
+++ b/src/main/resources/templates/user/product.html
@@ -300,51 +300,6 @@
   </div>
   <!--================End Single Product Area =================-->
 
-  <!-- product_list part start-->
-  <section class="related_product">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-12">
-                <div class="section_tittle">
-                    <h2>Sản phẩm <span>liên quan</span></h2>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="product_list_slider owl-carousel owl-theme">
-                    <div class="single_product_list_slider">
-                        <div class="row align-items-center justify-content-between" th:each="product : ${product}">
-                            <div class="col-lg-3 col-sm-6 col-6">
-                              <div class="single_product_item">
-                                <a th:href="@{'/product/' + ${product.id}}">
-                                    <img th:src="@{'data:image/png;base64,'+${product.image}}" alt="Product Image">
-                                    <span class="product_tag"
-                                          th:text="${product.status.displayName}">Nổi bật</span>
-                                </a>
-
-                                <div class="single_product_text">
-                                    <h5 class="product_category">
-                                        <a class="text-muted-1 category-link" href="#" data-category="furniture" th:text="${product.category.categoryName}"></a>
-                                    </h5>
-                                    <h4 class="product_title">
-                                        <a th:href="@{'/product/' + ${product.id}}" th:text="${product.name}"></a>
-                                    </h4>
-                                    <div class="product_price current_prefix">
-                                        <a th:text="${product.price}"></a>
-                                    </div>
-                                </div>
-                              </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-  </section>
-  <!-- product_list part end-->
-
   <!--::footer_part start::-->
   <footer class="footer_part">
     <div class="footlink_part">
@@ -371,8 +326,8 @@
                     <div class="single_footer_part">
                         <h4>Our Social</h4>
                         <ul class="list-unstyled">
-                            <li><a href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
-                            <li><a href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61560555539153">Facebook</a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/deprop_studio/">Instagram</a></li>
                         </ul>
                     </div>
                 </div>
