--- a/src/main/resources/templates/admin/add_product.html
+++ b/src/main/resources/templates/admin/add_product.html
@@ -164,6 +164,7 @@
                                     <option value="OUT_OF_STOCK">Hết hàng</option>
                                     <option value="IN_STOCK">Còn hàng</option>
                                     <option value="FEATURED">Hàng nổi bật</option>
+                                    <option value="COMBO">Combo</option>
 <!--                                    <option value="1">One</option>-->
 <!--                                    <option value="2">Two</option>-->
 <!--                                    <option value="3">Three</option>-->
