--- a/src/main/resources/templates/admin/edit_product.html
+++ b/src/main/resources/templates/admin/edit_product.html
@@ -165,6 +165,7 @@
                                     <option value="OUT_OF_STOCK">Hết hàng</option>
                                     <option value="IN_STOCK">Còn hàng</option>
                                     <option value="FEATURED">Hàng nổi bật</option>
+                                    <option value="COMBO">Combo</option>
                                 </select>
                                 <div class="invalid-feedback">
                                     Vui lòng chọn tình trạng.
